kubecon-24-demo/deployment/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-kubecon
  namespace: open-feature-kubecon
  labels:
    app: open-feature-kubecon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-kubecon
  template:
    metadata:
      labels:
        app: open-feature-kubecon
      annotations:
        openfeature.dev/enabled: "true"
        openfeature.dev/featureflagsource: "flag-sources"
    spec:
      containers:
        - name: open-feature-kubecon
          # image: docker.io/lukasreining/kubecon-24-demo
          image: docker.io/toddbaert/openfeature-kubecon24
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-kubecon
  namespace: open-feature-kubecon
spec:
  type: ClusterIP
  selector:
    app: open-feature-kubecon
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-feature-kubecon
  namespace: open-feature-kubecon
  annotations:
    cert-manager.io/cluster-issuer: reining-dev-prod-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: of-demo.reining.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-feature-kubecon
                port:
                  number: 80
  tls:
    - hosts:
        - of-demo.reining.dev
      secretName: open-feature-kubecon-tls
